Implementing new functions to get and set PTM settings.